# medra-to-datacite

./: .editorconfig  .gitignore  README.rst  pyproject.toml  run-style-checks.sh  run-tests.sh  setup.cfg  setup.py
docs/: __init__.py  conf.py  index.rst
medra_to_datacite/: __init__.py  cli.py  utils.py  version.py  visitor.py
