##########################################################
#
# Copyright (C) 2021-2023 Graz University of Technology.
#
# medra-to-datacite is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = medra-to-datacite
version = attr: medra_to_datacite.__version__
description = "Converter from medra schema to datacite schema."
long_description = file: README.rst, CHANGES.rst
keywords = medra datacite
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/medra-to-datacite
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    click>=8.1.0

[options.extras_require]
tests =
    check-manifest>=0.42
    coverage>=5.3
    pytest>=7.0.0
    pytest-bandit>=0.6.1
    pytest-black>=0.3.0
    pytest-cov>=4.0.0
    ruff>=0.0.261
    Sphinx>=6.1.3

[options.entry_points]
console_scripts =
    medraToDatacite = medra_to_datacite.cli:cli

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --bandit --black --doctest-glob="*.rst" --doctest-modules --cov=medra_to_datacite --cov-report=term-missing
testpaths = tests medra_to_datacite
